# check2pay

./: Cargo.toml  LICENSE.md  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  tags.rs  transaction_tags.rs  transactions.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220801_214627_create_transactions_table.rs  m20220801_214641_create_tags_table.rs  m20220801_214650_create_transactiontags_table.rs
src/: main.rs
static/: check2pay.css
static/css/: check2pay.css  skeleton.css  style.css
templates/: base.html.tera  edit.html.tera  index.html.tera  layout.html.tera  login.html.tera  new.html.tera  signup.html.tera  total.html.tera  transaction_list.html.tera
